--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-28 (4.0.28.44-0.2.0.0-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sun, 21 Dec 2025 16:33:59 +0300
+
 nitrocid-28 (4.0.28.44-0.2.0.0~rc-1) noble; urgency=medium
 
   * Added two-factor authentication for Nitrocid users
