--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.526-0.1.0.66-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Wed, 31 Dec 2025 11:48:17 +0300
+
 nitrocid-25 (3.0.25.526-0.1.0.65-1) noble; urgency=medium
 
   * General improvements and bug fixes
