--- a/CHANGES
+++ b/CHANGES
@@ -1,12 +1,10 @@
-We've released this version to update the native libraries within Nitrocid!
-
-This release will help you migrate your mods to .NET 10.0 prior to the Nitrocid 0.2.0 release expected February 2026!
+We've released this version to update ImageMagick contained within Terminaux!
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` Updated BassBoom, Terminaux, SpecProbe, and Magico
+- `[*]` Updated Terminaux
 
 Review the commit history if you want to get a deep insight about the changes.
 
