fin - Finalized changelogs
---

Type: fin
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 nitrocid-25 (3.0.25.526-0.1.0.66-1) noble; urgency=medium
 
-  * General improvements and bug fixes
+  * Updated Terminaux
 
  -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Wed, 31 Dec 2025 11:48:17 +0300
 
