add - Added the new Aptivi logo color theme
---

To reflect our rebranded Aptivi, we've added the new color theme!

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.ar.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.ar.resx
@@ -354,5 +354,8 @@
   <data name="NKS_THEMEPACKS_THEME_DESC_LEGACY2022" xml:space="preserve">
     <value>ألوان شعار نيتروسيد كي إس (٢٠٢٢-٢٠٢٤)</value>
   </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_APTIVIOLD" xml:space="preserve">
+    <value>ألوان العلامة التجارية السابقة</value>
+  </data>
 
 </root>
