--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/brz.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/brz.json
@@ -320,6 +320,10 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
       "text": "Cores do logotipo do Nitrocid KS (2022-2024)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_APTIVIOLD",
+      "text": "Cores da marca anterior"
     }
   ]
 }
