--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/eng.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/eng.json
@@ -427,6 +427,10 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
       "text": "Colors from the Nitrocid KS logo (2022-2024)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_APTIVIOLD",
+      "text": "Earlier branding colors"
     }
   ]
 }
