--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ind.json
@@ -321,6 +321,10 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
       "text": "naitrosid ks logo ke rang (2022-2024)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_APTIVIOLD",
+      "text": "pahale ke braanding rang"
     }
   ]
 }
