--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ita.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ita.json
@@ -324,6 +324,10 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
       "text": "Colori del logo Nitrocid KS (2022-2024)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_APTIVIOLD",
+      "text": "Colori del marchio precedenti"
     }
   ]
 }
