--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ptg.json
@@ -331,6 +331,10 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
       "text": "Cores do logótipo Nitrocid KS (2022-2024)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_APTIVIOLD",
+      "text": "Cores da marca anterior"
     }
   ]
 }
