--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/vtn.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/vtn.json
@@ -321,6 +321,10 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
       "text": "Màu sắc từ logo Nitrocid KS (2022-2024)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_APTIVIOLD",
+      "text": "Màu sắc thương hiệu trước đây"
     }
   ]
 }
