--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.zh.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.zh.resx
@@ -354,5 +354,8 @@
   <data name="NKS_THEMEPACKS_THEME_DESC_LEGACY2022" xml:space="preserve">
     <value>Nitrocid KS 標誌的顏色（2022-2024）</value>
   </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_APTIVIOLD" xml:space="preserve">
+    <value>早期品牌顏色</value>
+  </data>
 
 </root>
