--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/arb-T.json
@@ -347,6 +347,10 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
       "text": "ألوان شعار نيتروسيد كي إس (٢٠٢٢-٢٠٢٤)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_APTIVIOLD",
+      "text": "ألوان العلامة التجارية السابقة"
     }
   ]
 }
