--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ger.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ger.json
@@ -330,6 +330,10 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
       "text": "Farben aus dem Nitrocid KS-Logo (2022-2024)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_APTIVIOLD",
+      "text": "Frühere Markenfarben"
     }
   ]
 }
