--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/iri.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/iri.json
@@ -322,6 +322,10 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
       "text": "Dathanna ó lógó Nitrocid KS (2022-2024)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_APTIVIOLD",
+      "text": "Dathanna brandála níos luaithe"
     }
   ]
 }
