--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/rmn.json
@@ -322,6 +322,10 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
       "text": "Culori din sigla Nitrocid KS (2022-2024)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_APTIVIOLD",
+      "text": "Culorile de branding anterioare"
     }
   ]
 }
