--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/tky.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/tky.json
@@ -322,6 +322,10 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
       "text": "Nitrocid KS logosundan renkler (2022-2024)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_APTIVIOLD",
+      "text": "Önceki marka renkleri"
     }
   ]
 }
