--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ukr.json
@@ -321,6 +321,10 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
       "text": "Кольори з логотипу Nitrocid KS (2022-2024)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_APTIVIOLD",
+      "text": "Попередні кольори брендування"
     }
   ]
 }
