--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-28 (4.0.28.48-0.2.0.0-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Wed, 07 Jan 2026 17:25:37 +0300
+
 nitrocid-28 (4.0.28.47-0.2.0.0-1) noble; urgency=medium
 
   * General improvements and bug fixes
