ref - Refactored analyzer to print extra summary
---

We've refactored the langauge analyzer to print summary of extraneous
language descriptors to the build output.

---

Type: ref
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/private/Nitrocid.LocaleChecker/Resources/AnalyzerResources.resx
+++ b/private/Nitrocid.LocaleChecker/Resources/AnalyzerResources.resx
@@ -141,4 +141,10 @@
   <data name="ExtraLocalizedJsonStringAnalyzerDescription" xml:space="preserve">
     <value>While Nitrocid KS accepts unlocalized strings and returns them as is, it's recommended to remove this string so that translations would be complete before the end of the development cycle.</value>
   </data>
+  <data name="ExtraLocalizedJsonSummaryStringAnalyzerTitle" xml:space="preserve">
+    <value>Here's a list of languages that have extra localization descriptors</value>
+  </data>
+  <data name="ExtraLocalizedJsonSummaryStringAnalyzerMessageFormat" xml:space="preserve">
+    <value>This language, {0}, contains extraneous language descriptors: {1}</value>
+  </data>
 </root>
