imp - Locale checker now checks excluded code
---

Excluded code is now included in the locale checker's analysis context,
because localization covers not only enabled code, but also disabled code.

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/private/Nitrocid.LocaleChecker/Resources/AnalyzerResources.resx
+++ b/private/Nitrocid.LocaleChecker/Resources/AnalyzerResources.resx
@@ -147,4 +147,10 @@
   <data name="ExtraLocalizedJsonSummaryStringAnalyzerMessageFormat" xml:space="preserve">
     <value>This language, {0}, contains extraneous language descriptors: {1}</value>
   </data>
+  <data name="UnlocalizedDisabledStringAnalyzerMessageFormat" xml:space="preserve">
+    <value>This string, "{0}", is in the DoTranslation() method, and is placed under conditional compiler preprocessor directive, but is unlocalized for languages "{1}"</value>
+  </data>
+  <data name="UnlocalizedDisabledCommentStringAnalyzerMessageFormat" xml:space="preserve">
+    <value>This string, "{0}", is marked as localizable, and is placed under conditional compiler preprocessor directive, but is unlocalized for languages "{1}"</value>
+  </data>
 </root>
