--- a/private/Nitrocid.LocaleChecker/Resources/AnalyzerResources.resx
+++ b/private/Nitrocid.LocaleChecker/Resources/AnalyzerResources.resx
@@ -133,7 +133,7 @@
     <value>This string, "{0}", is in a localizable part of the JSON resource, but is unlocalized for languages "{1}"</value>
   </data>
   <data name="ExtraLocalizedJsonStringAnalyzerMessageFormat" xml:space="preserve">
-    <value>There might be potentially extra localization found in the JSON representation file "{0}" that is not found in the source code: {1}</value>
+    <value>There might be potentially extra localization found in the JSON representation file that is not found in the source code: {0}</value>
   </data>
   <data name="ExtraLocalizedJsonStringAnalyzerTitle" xml:space="preserve">
     <value>You'll need to remove this string at the end of the development cycle</value>
